Added meta keywords

--- a/decencyproject.us/index.html
+++ b/decencyproject.us/index.html
@@ -2,6 +2,7 @@
 <head>
         <title>The Decency Project</title>
 		<meta name="description" content="We're an entirely digital grassroots movement fighting for a future in which progress is possible. Let's #DemandDecency in the Oval Office.">
+		<meta name="keywords" content="election, Trump, Biden, President, Atlantic, CNN, Fox News, Settle for biden, demand decency, decency, demand, the future, american presidential election, election, american election, the world, 2020, covid, coronavirus">
 		<link href="styles/main.css" rel="stylesheet" type="text/css">
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
