--- a/decencyproject.us/index.html
+++ b/decencyproject.us/index.html
@@ -61,6 +61,7 @@
 			</span>
 			<img src="assets/Decency_Project_Logo_Cropped_800.jpg" alt="Decency Project Logo" title="The Decency Project" class="nav-logo">
 			<ul class="menu" id="js-menu">
+				<li><a href="stories.html">Voting Pledges</a></li>
 				<li><a href="#what-we-do">What we do</a></li>
 				<li><a href="#who-we-are">Who we are</a></li>
 				<li><a href="#fellowship-button">Fellowship</a></li>
